fixed bug that squished project image on mobile

--- a/css/projectPage.css
+++ b/css/projectPage.css
@@ -26,7 +26,7 @@
 }
 
 #main_img {
-	height: 300px;
+	max-height: 300px;
 }
 
 .container {
